--- a/src/app/Components/info/info.component.html
+++ b/src/app/Components/info/info.component.html
@@ -15,7 +15,7 @@
                     <h1 class="conHead">Physical Abuse</h1>
                     <h1 class="conMiniHead">Involves the intentional use of force causing injury or bodily harm. This can include hitting, slapping, punching, or any form of physical harm.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToPhysicalAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
