--- a/src/app/Components/InfoDetails/physical-abuse/physical-abuse.component.html
+++ b/src/app/Components/InfoDetails/physical-abuse/physical-abuse.component.html
@@ -9,7 +9,10 @@
         </div></div>
         
     
-    <div class="semiTop"></div>
+    <div class="semiTop">
+        <h1 class="reportH1">Report and Prevent Abuse in Lagos State</h1>
+        <h1 class="minireportH1">Join us in creating a safer community!</h1>
+    </div>
     <div class="middleTop">
         <div class="content">
             <h1 class="headerr">Physical abuse is a distressing and reprehensible form of mistreatment that involves the intentional use of force to cause harm, injury, or pain to another person. This form of abuse manifests in various relationships and settings, cutting across cultural, socio-economic, and educational boundaries. Understanding the dynamics and consequences of physical abuse is crucial for addressing its impact on individuals and society as a whole.</h1>
@@ -39,8 +42,8 @@
                         <li>Repeated injuries or a consistent pattern of harm.</li>
                         <li>Injuries that align with a specific cycle of tension building, explosive incident, and remorse/apology.</li>
                     </ul>
-                </li> Isolation and Secrecy:
-                <li>
+                </li> 
+                <li> Isolation and Secrecy:
                     <ul class="innerList">
                         <li>Feeling the need to hide injuries or make excuses for them.</li>
                         <li>A sense of isolation from friends and family, often due to the abuser's control tactics.</li>
