--- a/src/app/Components/info/info.component.html
+++ b/src/app/Components/info/info.component.html
@@ -20,15 +20,14 @@
                         </button>
                     </div>
                 </div>
-            </div>
-           
+            </div> 
             <div class="conTent">
                 <img src="../../../assets/images/emotionalabuse.jpg" alt="" class="Img">
                 <div class="conTT">
                     <h1 class="conHead">Emotional Abuse</h1>
                     <h1 class="conMiniHead">Inflicts emotional trauma through manipulation, humiliation, intimidation, or constant criticism. It undermines an individual's self-worth and mental well-being.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToEmotionalAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
@@ -40,7 +39,7 @@
                     <h1 class="conHead">Sexual Abuse</h1>
                     <h1 class="conMiniHead">Involves non-consensual sexual activities or coercion, including rape, molestation, or any unwanted sexual advances. This type of abuse violates personal boundaries and can have severe psychological consequences.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToSexualAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
@@ -52,7 +51,7 @@
                     <h1 class="conHead">Child Abuse</h1>
                     <h1 class="conMiniHead">Encompasses physical, emotional, or sexual maltreatment of a child. Child abuse can impede healthy development and leave lasting emotional scars.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToChildAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
@@ -66,7 +65,7 @@
                         Involves the use of words to belittle, degrade, or threaten. Verbal abuse can include yelling, name-calling, and constant criticism, eroding an individual's self-esteem.
                         </h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToVerbalAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
@@ -78,7 +77,7 @@
                     <h1 class="conHead">Elder Abuse</h1>
                     <h1 class="conMiniHead">Involves harming or exploiting an older person, often in a caregiving or familial relationship. Elder abuse can manifest as physical, emotional, financial, or neglectful mistreatment.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToElderAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
@@ -90,7 +89,7 @@
                     <h1 class="conHead">Stalking</h1>
                     <h1 class="conMiniHead">Persistent and unwanted attention, harassment, or surveillance directed towards an individual. Stalking can occur in person or through various forms of communication, such as online stalking.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToStalkingPage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
@@ -102,7 +101,7 @@
                     <h1 class="conHead">Spiritual Abuse</h1>
                     <h1 class="conMiniHead">Manipulation or misuse of spiritual beliefs and practices to control or harm others. This form of abuse can involve coercive religious practices, exploitation of faith, or the imposition of spiritual authority for harmful purposes.</h1>
                     <div class="bot">
-                        <button class="view">
+                        <button class="view" (click)="navigateToSpiritualAbusePage()">
                             <h1 class="viewText">View More</h1>
                         </button>
                     </div>
