--- a/src/app/Components/InfoDetails/physical-abuse/physical-abuse.component.scss
+++ b/src/app/Components/InfoDetails/physical-abuse/physical-abuse.component.scss
@@ -76,10 +76,29 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position-y: -220px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .reportH1{
+            color: #fff;
+                    font-size: 40px;
+                    font-family: 'Source Sans Pro', sans-serif;
+                    font-weight: 700;
+                    margin: 0;
+        }
+        .minireportH1{
+            color: #fff;
+                    font-size: 20px;
+                    font-family: 'Source Sans Pro', sans-serif;
+                    font-weight: 700;
+                    margin: 0;
+                    margin-top: 18px;
+        }
     }
     .middleTop{
         margin-top: 53px;
-        height: 1812px;
+        height: 1960px;
         width: calc(100% - 100px);
         background-color: #373737;
         border-radius: 24px;
@@ -156,6 +175,7 @@
                 font-weight: 700;
                 li{
                 margin-left: 39px;
+                margin-bottom: 8px;
                     list-style:disc;
                     .innerList{
                         margin: 0;
