--- a/src/app/Components/info/info.component.scss
+++ b/src/app/Components/info/info.component.scss
@@ -121,6 +121,7 @@
                             height: 34px;
                             border-radius: 24px;
                         display: flex;
+                        cursor: pointer;
                         align-items: center;
                         justify-content: center;
                             .viewText{
@@ -194,6 +195,7 @@
                             border-radius: 24px;
                         display: flex;
                         align-items: center;
+                        cursor: pointer;
                         justify-content: center;
                             .viewText{
                                 color: #fff;
