--- a/src/app/Components/reportpage/reportpage.component.html
+++ b/src/app/Components/reportpage/reportpage.component.html
@@ -1,75 +1,77 @@
-<div class="reportPage">
-    <div class="main">
+<app-loading-screen *ngIf="isLoading"></app-loading-screen>
+
+<div class="reportPage" *ngIf="isNorm">
+    <form class="main" autocomplete="off" [formGroup]="reportForm" (ngSubmit)="create()">
         <h1 class="title">Report Details</h1>
         <h1 class="subTitle">Abuse Category</h1>
-        <select name="" id="" class="abuseCate" >
+        <select name="" id="" class="abuseCate" formControlName="category" required>
             <option value="" >Select the abuse category</option>
-            <option value="" >Sexual Abuse</option>
-            <option value="" >Physical Abuse</option>
-            <option value="" >Child Abuse</option>
-            <option value="" >Elder Abuse</option>
+            <option value="Sexual Abuse" >Sexual Abuse</option>
+            <option value="Physical Abuse" >Physical Abuse</option>
+            <option value="Child Abuse" >Child Abuse</option>
+            <option value="Elder Abuse" >Elder Abuse</option>
         </select>
         <div class="miniForm">
             <div class="contForm">
                 <h1 class="label">Email Address</h1>
                 <div class="bottom">
-                    <input class="details " placeholder="your@email" />
+                    <input class="details " placeholder="your@email" formControlName="email"  required/>
                 </div>
             </div>
             <div class="contForm">
                 <h1 class="label">Phone Number</h1>
                 <div class="bottom">
-                    <input class="details " placeholder="09023456789" />
+                    <input class="details " placeholder="09023456789" formControlName="phone" required />
                 </div>
             </div>
             <div class="contForm">
                 <h1 class="label">Full Name</h1>
                 <div class="bottom">
-                    <input class="details " placeholder="Ajibile Damilola Esther" />
+                    <input class="details " placeholder="Ajibile Damilola Esther" formControlName="fullname" required />
                 </div>
             </div>
             <div class="contForm">
                 <h1 class="label">Date Of Birth</h1>
                 <div class="bottom">
-                    <input type="date" class="details " />
+                    <input type="date" class="details " formControlName="dateofb" required/>
                 </div>
             </div>
             <div class="contForm">
                 <h1 class="label">Location</h1>
                 <div class="bottom">
-                    <input class="details " placeholder="22, abcd street" />
+                    <input class="details " placeholder="22, abcd street" formControlName="location" required/>
                 </div>
             </div>
             <div class="contForm">
                 <h1 class="label">Gender of Victim</h1>
                 <div class="bottomG">
                     <label class="radi">
-                        <input class="radiio" type="radio" name="gender" value="male"> Male
+                        <input class="radiio" type="radio" name="gender" value="male" formControlName="gender" > Male
                       </label>
                       <label class="radi">
-                        <input class="radiio" type="radio" name="gender" value="female"> Female
+                        <input class="radiio" type="radio" name="gender" value="female" formControlName="gender" > Female
                       </label>
                       <label class="radi">
-                        <input class="radiio" type="radio" name="gender" value="prefer not to say"> Prefer not to say
+                        <input class="radiio" type="radio" name="gender" value="prefer not to say" formControlName="gender" > Prefer not to say
                       </label>
                 </div>
             </div>
             
         </div>
-        <textarea class="caseDescription" name="" id="" placeholder="Case Description"></textarea>
+        <textarea class="caseDescription" name="" id="" placeholder="Case Description" formControlName="casedescript" required></textarea>
         <div class="evidence">
             <h1 class="eviTitle">Do you have evidence?</h1>
             <h2 class="eviDet">Upload any evidence you have. If not, proceed to submit.</h2>
-            <input type="file" id="fileInput" class="file-input" (change)="onFileSelected($event)">
+            <input type="file" id="fileInput" class="file-input" (change)="onFileSelected($event)" formControlName="evidence" >
             <label for="fileInput" class="custom-button">
                 {{ selectedFileName ? 'File Uploaded: ' + selectedFileName : 'Upload File' }}
                 <i class="fas fa-upload" *ngIf="!selectedFileName"></i>
               </label>
         </div>
         <div class="end">
-            <button class="submit">
+            <button class="submit" value="submit">
                 <h1 class="subText">Submit</h1>
             </button>
         </div>
-    </div>
+    </form>
 </div>
