--- a/src/app/Components/Admin/admin-component/admin-dash/admin-dash.component.scss
+++ b/src/app/Components/Admin/admin-component/admin-dash/admin-dash.component.scss
@@ -8,4 +8,25 @@
     position: absolute;
     height: 100%;
     background-color: #1e1e1e;
+    
+    .card{
+        height: 500px;
+        border-radius: 24px;
+        width: 800px;
+        background-image: url("../../../../../assets/images/dash2.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        flex-direction: row;
+        text-shadow: 10px 10px 10px #000;
+        justify-content: center;
+        align-items: center;
+        h1{
+            color: #fff;
+            font-size: 41px;
+            font-family: 'Source Sans Pro', sans-serif;
+            font-weight: 700; 
+            margin: 0;
+        }
+    }
 }
