--- a/src/app/Components/Admin/login/login.component.html
+++ b/src/app/Components/Admin/login/login.component.html
@@ -30,3 +30,35 @@
         </form>
     </div>
 </div>
+<div class="mobile">
+    <img src="./../../../../assets/images/adminlogin.png" alt="" class="logo">
+    <div class="right">
+        <div class="top">
+            <h1 class="titHead">MWC ABUSE</h1>
+            <h1 class="miniTitHead">Reporting and <br />
+                Prevention <br />
+                Platform</h1>
+        </div>
+        <form class="main" autocomplete="off" [formGroup]="loginForm" (ngSubmit)="login()">
+            <h1 class="header">Log in</h1>
+            <div class="conForm">
+                <label for="" class="label">Administrator Username</label>
+                <input type="text" class="input" placeholder="Enter your username" formControlName="username" />
+            </div>
+            <div class="conForm">
+                <label for="" class="label">Password</label>
+                <input type="password" class="input" placeholder="**************" formControlName="password" />
+            </div>
+            <input type="submit" class="login" value="Log In">
+            <button class="home" (click)="navigateToHomePage()">
+                <h1 class="hom">Home</h1>
+            </button>
+        </form>
+        <div class="left">
+            <h1 class="title">Log in to the MWC Abuse  <br />
+                Reporting System.</h1>
+            <h1 class="miniTitle">Access all the tools and features to effectively manage <br />
+                 abuse cases.</h1>
+        </div>
+    </div>
+</div>
