--- a/src/app/Components/homepage/homepage.component.html
+++ b/src/app/Components/homepage/homepage.component.html
@@ -17,3 +17,23 @@
         <h1>MWC Abuse helped us make a difference. Together, we can create a safer community</h1>
     </div>
 </div>
+<div class="mobile">
+    <div class="main">
+        <div class="left">
+            <h1>Report Abuse 
+                Cases</h1>
+            <h2>Take Action against Abuse</h2>
+           
+        </div>
+        <div class="right">
+            <div class="backimage"></div>
+            <div class="image"></div>
+        </div>
+        <button class="getStartedBtn" (click)="navigateToInfoPage()">
+            <h3>Get Started</h3>
+        </button>
+    </div>
+    <div class="footer">
+        <h1>MWC Abuse helped us make a difference. Together, we can create a safer community</h1>
+    </div>
+</div>
