--- a/src/app/Components/Admin/admin-component/admin-component.component.scss
+++ b/src/app/Components/Admin/admin-component/admin-component.component.scss
@@ -4,3 +4,8 @@
     position: absolute;
     display: flex;
 }
+@media (max-width:400px) and (min-width:300px) {
+    .body{
+        flex-direction: column;
+    }
+}
