--- a/src/app/Components/Admin/admin-component/admin-dash/admin-dash.component.scss
+++ b/src/app/Components/Admin/admin-component/admin-dash/admin-dash.component.scss
@@ -30,3 +30,36 @@
         }
     }
 }
+@media (max-width:400px) and (min-width:300px) {
+    .dashboard{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        position: absolute;
+        height: calc(100% - 73px);
+        background-color: #1e1e1e;
+        
+        .card{
+            height: 500px;
+            border-radius: 24px;
+            width: calc(100% - 50px);
+            background-image: url("../../../../../assets/images/dash2.png");
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: flex;
+            flex-direction: row;
+            text-shadow: 10px 10px 10px #000;
+            justify-content: center;
+            align-items: center;
+            h1{
+                color: #fff;
+                font-size: 21px;
+                font-family: 'Source Sans Pro', sans-serif;
+                font-weight: 700; 
+                margin: 0;
+            }
+        }
+    }
+}
