--- a/src/app/Components/Admin/admin-component/sidebar/sidebar.component.scss
+++ b/src/app/Components/Admin/admin-component/sidebar/sidebar.component.scss
@@ -57,3 +57,111 @@
         }
     }
 }
+.mobile{
+    display: none;
+}
+@media (max-width:400px) and (min-width:300px) {
+    .sidebar{
+        display: none;
+    }
+    .mobile{
+        width: 100%;
+        height: 73px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background-color: #1E1E1E;
+        justify-content: right;
+        .fa-bars{
+            width: 25px;
+            height: 25px;
+            color: #fff;
+            cursor: pointer;
+            margin-right: 20px;
+        }
+        .menu{
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            top: 0;
+            flex-direction: column;
+            position: fixed;
+            z-index: 10;
+            background-color: #1E1E1E;
+            .topp{
+                width: 100%;
+                height: 73px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: right;
+                .fa-times{
+                    width: 35px;
+                    height: 35px;
+                    color: #fff;
+                    cursor: pointer;
+                }
+            }
+            .buttons{
+                width: fit-content;
+                height: 200px;
+                margin-left: 20px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+                .btns{
+                    width: 200px;
+                    height: 50px;
+                    border-radius: 50%;
+                    background-color: transparent;
+                    border: 0;
+                    cursor: pointer;
+                    outline: none;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: left;
+                    align-items: center;
+        
+                    i{
+                        font-size: 30px;
+                        color: #fff;
+                        margin-right: 20px;
+                    }
+                    h1{
+                        color: #fff;
+                        font-size: 16px;
+                        font-family: 'Source Sans Pro', sans-serif;
+                        font-weight: 700;
+                        text-align: center;
+                        margin: 0; 
+                    }
+                }
+                .btns.active{
+                    background-color: #1E1E1E;
+                }
+                .logs{
+                    width: 100%;
+                    height: 50px;
+                    border: 0;
+                    cursor: pointer;
+                    outline: none;
+                    display: flex;
+                    background-color: transparent;
+                    flex-direction: row;
+                    justify-content: left;
+                    align-items: center;
+                    h1{
+                        color: #fff;
+                        font-size: 16px;
+                        font-family: 'Source Sans Pro', sans-serif;
+                        font-weight: 700;
+                        text-align: left;
+                        margin: 0; 
+                    }
+                }
+            }
+        }
+    }
+}
