--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -40,3 +40,40 @@
         </button>
     </div>
 </form>
+
+<form (ngSubmit)="handleSubmit()" [formGroup]="form"  novalidate class="mobile" *ngIf="isNorm">
+    <h1 class="title">Contact Us / Feedback</h1>
+    <div class="middle">
+        <div  class="left">
+            <div class="contForm">
+                <h1 class="label">Full Name</h1>
+                <div class="bottom">
+                    <input class="details " placeholder="Your Name" required formControlName="name" name="name" />
+                </div>
+            </div>
+            <div class="contForm">
+                <h1 class="label">Email</h1>
+                <div class="bottom">
+                    <input class="details " placeholder="Your Email" required formControlName="email" name="email" />
+                </div>
+            </div>
+            <div class="contForm">
+                <h1 class="label">Subject </h1>
+                <div class="bottom">
+                    <input class="details " placeholder="Subject" required formControlName="subject" name="subject"/>
+                </div>
+            </div>
+            <div class="contMForm">
+                <h1 class="label">Message </h1>
+                <div class="bottom">
+                    <textarea class="details " placeholder="Message" required formControlName="message" name="message"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="end">
+        <button value="submit" class="submit" [disabled]="loading || !form.valid" >
+            <h1 class="subText">{{ loading ? 'Sending...' : 'Send' }}</h1>
+        </button>
+    </div>
+</form>
