--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -58,3 +58,107 @@
         }
     }
 }
+.mobile{
+    display: none;
+}
+@media (max-width:400px) and (min-width:300px) {
+    .navbar{
+        display: none;
+    }
+    .mobile{
+        height: 71px;
+        width: 100%;
+        background-color: #1E1E1E;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        border: 0;
+        .logo{
+            width: fit-content;
+            height: fit-content;
+            margin: 0;
+            margin-left: 20px;
+            h1{
+                font-family: 'Source Sans Pro', sans-serif;
+                font-weight: 700;
+                color: #fff;
+                font-size: 14px;
+                margin: 0;
+            }
+        }
+        .fa-bars{
+            color: #fff;
+            width: 25px;
+            cursor: pointer;
+            height: 25px;
+            margin-right: 20px;
+        }
+        .menu{
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            background-color: #1E1E1E;
+            position: fixed;
+            display: flex;
+            top: 0;
+            flex-direction: column;
+            justify-content: left;
+            .topp{
+                width: 100%;
+                height: 73px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: right;
+                .fa-times{
+                    width: 35px;
+                    height: 35px;
+                    color: #fff;
+                    cursor: pointer;
+                }
+            }
+            .tabs{
+                width: fit-content;
+                height: 200px;
+                display: flex;
+                margin-left: 20px;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: start;
+                
+                a{
+                    text-decoration: none;
+                    color: #fff;
+                    font-size: 24px;
+                    font-family: 'Source Sans Pro', sans-serif;
+                    font-weight: 700;
+                }
+            }
+            .reportBtn{
+                width: 180px;
+                height: 56px;
+                background-color: #fff;
+                outline: none;
+                border: 0;
+                border-radius: 24px;
+                margin-left: 20px;
+                display: flex;
+                margin-top: 50px;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                h1{
+                    text-decoration: none;
+                    color: #000;
+                    font-size: 24px;
+                    font-family: 'Source Sans Pro', sans-serif;
+                    font-weight: 700;
+                }
+            }
+        }
+    }
+}
