--- a/src/app/Components/InfoDetails/elder-abuse/elder-abuse.component.html
+++ b/src/app/Components/InfoDetails/elder-abuse/elder-abuse.component.html
@@ -1,4 +1,10 @@
 <div class="elderAbusePage">
+    <div class="tp">
+        <button class="btn" (click)="navigateToInfoPage()">
+            <i class="fa fa-arrow-left-long"></i>
+            <h1>Go Back</h1>
+        </button>
+    </div>
     <div class="contain"><h1 class="title">Elder <span>Abuse</span></h1>
         <div class="top">
             <div class="up"></div>
