--- a/src/app/Components/info/info.component.scss
+++ b/src/app/Components/info/info.component.scss
@@ -211,3 +211,223 @@
         }
     }
 }
+@media (max-width:400px) and (min-width: 390px) {
+    .infoPage{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #1e1e1e;
+        .top{
+            width: 100%;
+            height: 90px;
+            margin-top: 49px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            .title{
+                color: #fff;
+                font-size: 24px;
+                position:relative;
+                font-family: 'Source Sans Pro', sans-serif;
+                font-weight: 700;
+                z-index: 2;
+                margin: 0;
+                width: 100%;
+                text-align: left;
+                text-indent: 25px;
+            }
+            .optionDiv{
+                width: 204px;
+                border-radius: 24px;
+                height: 37px;
+                background-color: #373737;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                .option1{
+                    width: 95px;
+                    height: 27px;
+                    border-radius: 24px;
+                    outline: none;
+                    display: flex;
+                    flex-direction: row;
+                    cursor: pointer;
+                    justify-content: center;
+                    background-color: transparent;
+                    align-items: center;
+                    border: 0;
+                    .insideText{
+                        color: #fff;
+                        font-size: 7px;
+                        font-family: 'Source Sans Pro', sans-serif;
+                        font-weight: 700;
+                        margin: 0;
+                    }
+                }
+                .option1.active{
+                    background-color: #000;
+                    transition: linear 0.7s;
+                }
+            }
+           
+        }
+        .contain{
+            margin-top: 59px;
+            width: 363px;
+            margin-bottom: 100px;
+            height: fit-content;
+            .mostComm{
+                height: fit-content;
+                width: 363px;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+                gap: 30px;
+                .conTent{
+                    background-color: #373737;
+                    border-radius: 24px;
+                    display: flex;
+                    height: 137px;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+    
+                    .Img{
+                        width: 180px;
+                        height: 120px;
+                        margin-left: 10px;
+                        border-radius: 24px;
+                    }
+                    .conTT{
+                        width: 140px;
+                        margin-right: 20px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: start;
+                        height: 120px;
+                        .conHead{
+                            color: #fff;
+                            font-size: 7px;
+                            font-family: 'Source Sans Pro', sans-serif;
+                            font-weight: 700;
+                            margin: 0;
+                            margin-top: 15px;
+                        }
+                        .conMiniHead{
+                            color: #fff;
+                            font-size: 6px;
+                            font-family: 'Source Sans Pro', sans-serif;
+                            font-weight: 400;
+                            margin: 0;
+                            margin-top: 15px;
+                        }
+                        .bot{
+                            height: 100%;
+                            width: 100%;
+                            display: flex;
+                            align-items: end;
+                            justify-content: right;
+                            .view{
+                                outline: none;
+                                border: 0;
+                                background-color: #800080;
+                                width: 50px;
+                                height: 22px;
+                                border-radius: 24px;
+                            display: flex;
+                            cursor: pointer;
+                            align-items: center;
+                            justify-content: center;
+                                .viewText{
+                                    color: #fff;
+                            font-size: 6px;
+                            font-family: 'Source Sans Pro', sans-serif;
+                            font-weight: 700;
+                            margin: 0;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+            .mostSevere{
+                height: fit-content;
+                width: 100%;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr 1fr 1fr ;
+                gap: 30px;
+                .conTent{
+                    background-color: #373737;
+                    border-radius: 24px;
+                    display: flex;
+                    height: 137px;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+    
+                    .Img{
+                        width: 180px;
+                        height: 120px;
+                        margin-left: 10px;
+                        border-radius: 24px;
+                    }
+                    .conTT{
+                        width: 140px;
+                        margin-right: 20px;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: start;
+                        height: 120px;
+                        .conHead{
+                            color: #fff;
+                            font-size: 7px;
+                            font-family: 'Source Sans Pro', sans-serif;
+                            font-weight: 700;
+                            margin: 0;
+                            margin-top: 15px;
+                        }
+                        .conMiniHead{
+                            color: #fff;
+                            font-size: 6px;
+                            font-family: 'Source Sans Pro', sans-serif;
+                            font-weight: 400;
+                            margin: 0;
+                            margin-top: 15px;
+                        }
+                        .bot{
+                            height: 100%;
+                            width: 100%;
+                            display: flex;
+                            align-items: end;
+                            justify-content: right;
+                            .view{
+                                outline: none;
+                                border: 0;
+                                background-color: #800080;
+                                width: 50px;
+                                height: 22px;
+                                border-radius: 24px;
+                            display: flex;
+                            cursor: pointer;
+                            align-items: center;
+                            justify-content: center;
+                                .viewText{
+                                    color: #fff;
+                            font-size: 6px;
+                            font-family: 'Source Sans Pro', sans-serif;
+                            font-weight: 700;
+                            margin: 0;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
